--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+
 <!DOCTYPE html>
-<!-- saved from url=(0038)https://lecepin.github.io/kindle-time/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clock For Kindle</title>
+<html>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Clock For EINKBOOK</title>
   <style>
     @font-face {
       font-family: TIME;
@@ -44,15 +46,14 @@
 </head>
 
 <body>
-  <div class="app" style="transform: rotate(0deg) translate3d(-50%, -50%, 0px);">
-    <div class="date" style="font-size: 2.8rem;">2024.3.27 星期三</div>
-    <div class="time" style="font-size: 7rem;">17:40</div>
-    <div class="cn-date" style="font-size: 1.75rem;">二月十八 龙年</div>
+  <div class="app">
+    <div class="date"></div>
+    <div class="time"></div>
+    <div class="cn-date"></div>
   </div>
 
-  <script src="./index_files/calendar.min.js.下载"></script>
-  <script src="./index_files/index.min.js.下载"></script>
+  <script src="./calendar.min.js"></script>
+  <script src="./index.min.js"></script>
+</body>
 
-
-
-</body></html>
+</html>
