--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <p class="lead">Welcome to my gallery</p>
                 <p>╮(╯▽╰)╭ I will upload my rendering image here, fell free in here.</p>
                 <p>～(￣▽￣～)(～￣▽￣)～Any questions please contact me.</p>
+                <p>┑(￣▽ ￣)┍ ┑(￣▽ ￣)┍If you like the rendering, support me.</p>
               </div>
               <div class="col-lg-6"><img src="img/about.jpg" alt="..." class="img-fluid rounded-circle d-block mx-auto"></div>
             </div>
@@ -85,7 +86,7 @@
         <div class="d-flex h-100 align-items-center">
           <div class="container">
             <header class="text-center mb-5">
-              <h2 class="text-uppercase lined">Contact page</h2>
+              <h2 class="text-uppercase lined">contact . support . page</h2>
             </header>
             <div class="row">
               <div class="col-lg-6">
@@ -96,6 +97,8 @@
                 <p>email: 44879425@qq.com .</p>
                 <p>phone: Shenzhen +86 13143832285</p>
               </div>
+              <div class="col-lg-4"><img src="img/mm_facetoface_collect_qrcode_1711603406115.png" alt="..." class="img-fluid rounded-circle d-block mx-auto"></div>
+              <div class="col-lg-4"><img src="img/1711604188130.jpg" alt="..." class="img-fluid rounded-circle d-block mx-auto"></div>
             </div>
           </div>
         </div>
