--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="favicon.png">
+    <style>
+      img {
+        width: 16vw;
+        height: auto;
+        max-width: 100%;
+      }
+    </style>
   </head>
   <body>
     <div class="main">
