--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <h1 class="text-uppercase my-4">My name is aj300</h1>
             <p class="font-italic lead">Nice to meet you.</p>
             <p class="font-italic lead">I love graphic design, 3d render, code, game....</p>
+            <p class="font-italic lead">我会把项目上传到这里</p>
             <p class="font-italic lead">Nixie tube Clock</p>
             <a href="https://aj300542.github.io/Clock/" class="d-block mb-1"><img src="img/p1_clock.jpg" alt="..." ></a>
             <p class="font-italic lead">Clock for Kobo</p>
             <a href="https://aj300542.github.io/kobo/" class="d-block mb-1"><img src="img/p1_kobo.jpg" alt="..." ></a>
-            <p class="font-italic lead">.</p>
             <p class="font-italic lead">more is coming up</p>
             <p class="font-italic lead">.</p>
             <p class="font-italic lead">scroll down.</p>
