--- a/index.html
+++ b/index.html
@@ -1,124 +1,181 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Screen - Multipurpose Template</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="all,follow">
-    <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <!-- Lightbox-->
-    <link rel="stylesheet" href="vendor/lightbox2/css/lightbox.min.css">
-    <!-- Parallax-->
-    <link rel="stylesheet" href="vendor/onepage-scroll/onepage-scroll.css">
-    <!-- theme stylesheet-->
-    <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
-    <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="css/custom.css">
-    <!-- Favicon-->
-    <link rel="shortcut icon" href="favicon.png">
-    <style>
-      img {
-        width: 16vw;
-        height: auto;
-        max-width: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="main">
-      <section class="bg-cover bg-center hero">
-        <div class="dark-overlay"></div>
-        <div class="position-relative z-index-1">
-          <div class="container text-center text-white">
-            <p class="font-italic lead">Hi, how are you doing.</p>
-            <h1 class="text-uppercase my-4">My name is aj300</h1>
-            <p class="font-italic lead">I love graphic design, 3d render, code, game....</p>
-            <p class="font-italic lead">我会把项目上传到这里</p>
-            <p class="font-italic lead">Nixie tube Clock</p>
-            <a href="https://aj300542.github.io/Clock/" class="d-block mb-1"><img src="img/p1_clock.jpg" alt="..." ></a>
-            <p class="font-italic lead">Clock for Kobo</p>
-            <a href="https://aj300542.github.io/kobo2/" class="d-block mb-1"><img src="img/p1_kobo2.jpg" alt="..." ></a>
-            <a href="https://aj300542.github.io/kobo/" class="d-block mb-1"><img src="img/p1_kobo.jpg" alt="..." ></a>           
-            <a href="https://aj300542.github.io/digital/" class="d-block mb-1"><img src="img/p1_digital.jpg" alt="..." ></a>             
-            <p class="font-italic lead">more is coming up</p>
-            <p class="font-italic lead">scroll down.</p>
-            <p class="font-italic lead">下面还有</p>
-            <p class="font-italic lead">如果你喜欢我的项目，可以左右支持我</p>
-          </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Screen - Multipurpose Template</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="all,follow">
+  <!-- Bootstrap CSS-->
+  <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+  <!-- Lightbox-->
+  <link rel="stylesheet" href="vendor/lightbox2/css/lightbox.min.css">
+  <!-- Parallax-->
+  <link rel="stylesheet" href="vendor/onepage-scroll/onepage-scroll.css">
+  <!-- theme stylesheet-->
+  <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
+  <!-- Custom stylesheet - for your changes-->
+  <link rel="stylesheet" href="css/custom.css">
+  <!-- Favicon-->
+  <link rel="shortcut icon" href="favicon.png">
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #000000;
+      color: #fb7c00;
+      font-family: 'Nixiebold-mini', Arial, sans-serif;
+      line-height: 2vh;
+      letter-spacing: 0.4em;
+      line-height: 1.5em;
+    }
+
+
+    img {
+      width: 16vw;
+      height: auto;
+      max-width: 100%;
+
+    }
+  </style>
+
+
+
+
+
+</head>
+
+<body>
+  <div class="main">
+    <section class="bg-cover bg-center hero">
+      <div class="dark-overlay"></div>
+      <div class="position-relative z-index-1">
+        <div class="container text-center text-white">
+          <p class="font-italic lead">Hi, how are you doing.</p>
+          <h1 class="text-uppercase my-4">My name is aj300</h1>
+
+          <p class="font-italic lead">I love graphic design, 3d render, code, game....</p>
+          <p class="font-italic lead">我会把项目上传到这里</p>
+          <p class="font-italic lead">Nixie tube Clock</p>
+          <a href="https://aj300542.github.io/Clock/" class="d-block mb-1"><img src="img/p1_clock.jpg" alt="..."></a>
+          <a href="https://aj300542.github.io/nixietube/" class="d-block mb-1"><img src="img/p1_nixie.jpg"
+              alt="..."></a>
+          <p class="font-italic lead">Clock for Kobo</p>
+          <a href="https://aj300542.github.io/kobo/" class="d-block mb-1"><img src="img/p1_kobo.jpg" alt="..."></a>
+          <a href="https://aj300542.github.io/kobo2/" class="d-block mb-1"><img src="img/p1_kobo2.jpg" alt="..."></a>
+          <a href="https://aj300542.github.io/digital/" class="d-block mb-1"><img src="img/p1_digital.jpg"
+              alt="..."></a>
+          <p class="font-italic lead">I truly appreciate your help. Your support has made a significant difference</p>
+          <p class="font-italic lead">我非常感谢你的帮助，你的支持对我来说意义重大</p>
+          <p class="font-italic lead"></p>Scroll down for more content</p>
+
         </div>
-        <div class="scroll-btn link-scroll"><i class="fas fa-angle-double-down"></i></div>
-      </section>
-      <section id="1">
-        <div class="d-flex h-100 align-items-center">
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="col-lg-6 mb-4 mb-lg-0">
-                <header class="text-center">
-                  <h2 class="text-uppercase lined">┑(￣▽ ￣)┍</h2>
-                </header>
-                <p class="lead">Welcome to my gallery</p>
-                <p>╮(╯▽╰)╭ I will upload my rendering image here, fell free in here.</p>
-                <p>～(￣▽￣～)(～￣▽￣)～Any questions please contact me.</p>
-                <p>┑(￣▽ ￣)┍ ┑(￣▽ ￣)┍If you like the rendering, support me.</p>
-              </div>
-              <div class="col-lg-6"><img src="img/about.jpg" alt="..." class="img-fluid rounded-circle d-block mx-auto"></div>
+      </div>
+      <div class="scroll-btn link-scroll"><i class="fas fa-angle-double-down"></i></div>
+    </section>
+    <section id="1">
+      <div class="d-flex h-100 align-items-center">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-6 mb-4 mb-lg-0">
+              <header class="text-center">
+                <h2 class="text-uppercase lined">┑(￣▽ ￣)┍</h2>
+              </header>
+              <p class="lead">Welcome to my gallery</p>
+              <p>╮(╯▽╰)╭ I'm glad you're here. Feel free to explore and enjoy the content.</p>
+              <p>╮(╯▽╰)╭
+                My name is Yixiang Wang.
+                I have been working in the construction industry for twenty years.
+                I have interests in graphic design, programming, gaming, music, movies, and books.
+              </p>
+              <p>┑(￣▽ ￣)┍ ┑(￣▽ ￣)┍ If you have any questions or need assistance, don’t hesitate to reach out. Enjoy your
+                visit. </p>
+
+              <p>┑(￣▽ ￣)┍ ┑(￣▽ ￣)┍ I truly value your opinion and expertise. Your support would mean a lot to me and
+                would greatly contribute to my work.
+              </p>
+            </div>
+            <div class="col-lg-6"><img src="img/about.jpg" alt="..." class="img-fluid rounded-circle d-block mx-auto">
             </div>
           </div>
         </div>
-      </section>
-      <section>
-        <div class="d-flex h-100 align-items-center">
-          <div class="container">
-            <header class="text-center mb-2">
-              <h2 class="text-uppercase lined">Gallery</h2>
-            </header>
-            <div class="row">
-              <div class="col-lg-12 text-center">
-                <p>Welcome to my image gallery.</p>
-              </div>
-              <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="bird" class="d-block mb-1"><img src="img/portfolio-1.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
-              <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-2.jpg" data-lightbox="image-1" data-title="3D print" class="d-block mb-1"><img src="img/portfolio-2.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
-              <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-3.jpg" data-lightbox="image-1" data-title="panda" class="d-block mb-1"><img src="img/portfolio-3.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
-              <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-4.jpg" data-lightbox="image-1" data-title="Geometry" class="d-block mb-1"><img src="img/portfolio-4.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
-              <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-5.jpg" data-lightbox="image-1" data-title="Geographic" class="d-block mb-1"><img src="img/portfolio-5.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
-              <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-6.jpg" data-lightbox="image-1" data-title="architecture pattern" class="d-block mb-1"><img src="img/portfolio-6.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
-              <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-7.jpg" data-lightbox="image-1" data-title="the legend of zelda" class="d-block mb-1"><img src="img/portfolio-7.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
-              <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-8.jpg" data-lightbox="image-1" data-title="space" class="d-block mb-1"><img src="img/portfolio-8.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
-              <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-9.jpg" data-lightbox="image-1" data-title="Egyptology" class="d-block mb-1"><img src="img/portfolio-9.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
+      </div>
+    </section>
+    <section>
+      <div class="d-flex h-100 align-items-center">
+        <div class="container">
+          <header class="text-center mb-2">
+            <h2 class="text-uppercase lined">Gallery</h2>
+          </header>
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <p>Welcome to my project gallery.</p>
             </div>
+            <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="bird"
+                class="d-block mb-1"><img src="img/portfolio-1.jpg" alt="..." class="img-fluid d-block mx-auto"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-2.jpg" data-lightbox="image-1" data-title="car"
+                class="d-block mb-1"><img src="img/portfolio-2.jpg" alt="..." class="img-fluid d-block mx-auto"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-3.jpg" data-lightbox="image-1" data-title="panda"
+                class="d-block mb-1"><img src="img/portfolio-3.jpg" alt="..." class="img-fluid d-block mx-auto"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-4.jpg" data-lightbox="image-1"
+                data-title="Geometry" class="d-block mb-1"><img src="img/portfolio-4.jpg" alt="..."
+                  class="img-fluid d-block mx-auto"></a></div>
+            <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-5.jpg" data-lightbox="image-1"
+                data-title="Geographic" class="d-block mb-1"><img src="img/portfolio-5.jpg" alt="..."
+                  class="img-fluid d-block mx-auto"></a></div>
+            <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-6.jpg" data-lightbox="image-1"
+                data-title="architecture pattern" class="d-block mb-1"><img src="img/portfolio-6.jpg" alt="..."
+                  class="img-fluid d-block mx-auto"></a></div>
+            <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-7.jpg" data-lightbox="image-1"
+                data-title="the legend of zelda" class="d-block mb-1"><img src="img/portfolio-7.jpg" alt="..."
+                  class="img-fluid d-block mx-auto"></a></div>
+            <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-8.jpg" data-lightbox="image-1" data-title="space"
+                class="d-block mb-1"><img src="img/portfolio-8.jpg" alt="..." class="img-fluid d-block mx-auto"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-9.jpg" data-lightbox="image-1"
+                data-title="Egyptology" class="d-block mb-1"><img src="img/portfolio-9.jpg" alt="..."
+                  class="img-fluid d-block mx-auto"></a></div>
           </div>
         </div>
-      </section>
-      <section class="bg-gray">
-        <div class="d-flex h-100 align-items-center">
-          <div class="container">
-            <header class="text-center mb-5">
-              <h2 class="text-uppercase lined">contact . support . page</h2>
-            </header>
-            <div class="row">
-              <div class="col-lg-6">
-                <p>email: sam300542@163.com .</p>
-                <p>phone: Hongkong +852 60779983</p>
-              </div>
-              <div class="col-lg-6">
-                <p>email: 44879425@qq.com .</p>
-                <p>phone: Shenzhen +86 13143832285</p>
-              </div>
-              <div class="col-lg-4"><img src="img/mm_facetoface_collect_qrcode_1711603406115.png" alt="..." class="img-fluid rounded-circle d-block mx-auto"></div>
-              <div class="col-lg-4"><img src="img/1711604188130.jpg" alt="..." class="img-fluid rounded-circle d-block mx-auto"></div>
+      </div>
+    </section>
+    <section class="bg-gray">
+      <div class="d-flex h-100 align-items-center">
+        <div class="container">
+          <header class="text-center mb-5">
+            <h2 class="text-uppercase lined">contact . support . page</h2>
+          </header>
+          <div class="row">
+            <div class="col-lg-6">
+              <p>email: sam300542@163.com .</p>
+              <p>phone: Hongkong +852 60779983</p>
             </div>
+            <div class="col-lg-6">
+              <p>email: 44879425@qq.com .</p>
+              <p>phone: Shenzhen +86 13143832285</p>
+            </div>
+            <div class="col-lg-4"><img src="img/mm_facetoface_collect_qrcode_1711603406115.png" alt="..."
+                class="img-fluid rounded-circle d-block mx-auto"></div>
+            <div class="col-lg-4"><img src="img/1711604188130.jpg" alt="..."
+                class="img-fluid rounded-circle d-block mx-auto"></div>
           </div>
         </div>
-      </section>
-    </div>
-    <!-- JavaScript files-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/onepage-scroll/jquery.onepage-scroll.min.js"></script>
-    <script src="vendor/lightbox2/js/lightbox.min.js"></script>
-    <script src="js/front.js"></script>
-  </body>
+      </div>
+    </section>
+  </div>
+  <!-- JavaScript files-->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/onepage-scroll/jquery.onepage-scroll.min.js"></script>
+  <script src="vendor/lightbox2/js/lightbox.min.js"></script>
+  <script src="js/front.js"></script>
+</body>
+
 </html>
