--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
       max-width: 100%;
 
     }
+
+    .p2time {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      left: 10vw;
+      top: 35vh;
+      z-index: 999;
+    }
   </style>
 
 
@@ -52,6 +62,9 @@
 <body>
   <div class="main">
     <section class="bg-cover bg-center hero">
+      <div class="p2time">
+        <a href="https://aj300542.github.io/time/" class="d-block mb-1"><img src="img/p2_time.jpg" alt="..."></a>
+      </div>
       <div class="dark-overlay"></div>
       <div class="position-relative z-index-1">
         <div class="container text-center text-white">
