--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     .p2time {
       position: absolute;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       left: 10vw;
@@ -64,6 +65,7 @@
     <section class="bg-cover bg-center hero">
       <div class="p2time">
         <a href="https://aj300542.github.io/time/" class="d-block mb-1"><img src="img/p2_time.jpg" alt="..."></a>
+        <a href="https://aj300542.github.io/cloud/" class="d-block mb-1"><img src="img/p2_cloud.jpg" alt="..."></a>
       </div>
       <div class="dark-overlay"></div>
       <div class="position-relative z-index-1">
