--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       top: 35vh;
       z-index: 999;
     }
+
     .p3time {
       position: absolute;
       display: flex;
@@ -72,6 +73,7 @@
       <div class="p2time">
         <a href="https://aj300542.github.io/time/" class="d-block mb-1"><img src="img/p2_time.jpg" alt="..."></a>
         <a href="https://aj300542.github.io/cloud/" class="d-block mb-1"><img src="img/p2_cloud.jpg" alt="..."></a>
+        <a href="https://aj300542.github.io/music/" class="d-block mb-1"><img src="img/p2_music.png" alt="..."></a>
       </div>
       <div class="p3time">
         <a href="https://aj300542.github.io/5/" class="d-block mb-1"><img src="img/p3_time.jpg" alt="..."></a>
