--- a/index.html
+++ b/index.html
@@ -41,7 +41,27 @@
       max-width: 100%;
 
     }
-
+    .codeframe,
+    .codeframe2 {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      bottom: -5vh;
+      z-index: 999;
+      scale: 1;
+      overflow: hidden;
+      width: 8vw;
+      height: auto;
+      opacity: 0.75;
+    }
+    .codeframe {
+      left: 2vw;
+    }
+    .codeframe2 {
+      right: 2vw;
+    }
     .p2time {
       position: absolute;
       display: flex;
@@ -97,6 +117,8 @@
               alt="..."></a>
           <p class="font-italic lead">I truly appreciate your help. Your support has made a significant difference</p>
           <p class="font-italic lead">我非常感谢你的帮助，你的支持对我来说意义重大</p>
+          <div class="codeframe"><img src="img/mm_facetoface_collect_qrcode_1711603406115.png" alt="..."></div>
+        <div class="codeframe2"><img src="img/1711604188130.jpg" alt="..."></div>
           <p class="font-italic lead"></p>Scroll down for more content</p>
 
         </div>
