--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
     img {
-      width: 16vw;
+      width: 23vh;
       height: auto;
       max-width: 100%;
 
@@ -52,15 +52,15 @@
       z-index: 999;
       scale: 1;
       overflow: hidden;
-      width: 8vw;
+      width: 15vh;
       height: auto;
       opacity: 0.75;
     }
     .codeframe {
-      left: 2vw;
+      left: 8vh;
     }
     .codeframe2 {
-      right: 2vw;
+      right: 8vh;
     }
     .p2time {
       position: absolute;
