--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <a href="https://aj300542.github.io/music/" class="d-block mb-1"><img src="img/p2_music.png" alt="..."></a>
       </div>
       <div class="p3time">
-        <a href="https://aj300542.github.io/5/" class="d-block mb-1"><img src="img/p3_time.jpg" alt="..."></a>
+        <a href="https://aj300542.github.io/txt/" class="d-block mb-1"><img src="img/word.jpg" alt="..."></a>
         <a href="https://aj300542.github.io/33/" class="d-block mb-1"><img src="img/eskier.jpg" alt="..."></a>
         <a href="https://aj300542.github.io/ds2/" class="d-block mb-1"><img src="img/p3-ds2.jpg" alt="..."></a>
       </div>
