--- a/index.html
+++ b/index.html
@@ -159,24 +159,36 @@
       <div class="dark-overlay"></div>
       <div class="position-relative z-index-1">
         <div class="container text-center text-white">
-          <p class="font-italic lead">Hi, how are you doing.</p>
+          <p class="font-italic lead">Hi, how are you doing</p>
           <h1 class="text-uppercase my-4">My name is aj300</h1>
-
-          <p class="font-italic lead">I love graphic design, 3d render, code, game....</p>
           <p class="font-italic lead">我会把项目上传到这里</p>
-          <p class="font-italic lead">Nixie tube Clock</p>
-          <a href="https://aj300542.github.io/Clock/" class="d-block mb-1"><img src="img/p1_clock.jpg" alt="..."></a>
-          <a href="https://aj300542.github.io/nixietube/" class="d-block mb-1"><img src="img/p1_nixie.jpg"
-              alt="..."></a>
+          <div class="img-container">
+            <a href="https://aj300542.github.io/Clock/" class="d-block mb-1">
+              <img src="img/p1_clock.jpg" alt="..."></a>
+            <div class="hover-text">辉光管IN-18</div>
+          </div>
+          <div class="img-container">
+            <a href="https://aj300542.github.io/nixietube/" class="d-block mb-1">
+              <img src="img/p1_nixie.jpg" alt="..."></a>
+            <div class="hover-text">复刻辉光管</div>
+          </div>
           <p class="font-italic lead">Clock for Kobo</p>
-          <a href="https://aj300542.github.io/kobo/" class="d-block mb-1"><img src="img/p1_kobo.jpg" alt="..."></a>
-          <a href="https://aj300542.github.io/kobo2/" class="d-block mb-1"><img src="img/p1_kobo2.jpg" alt="..."></a>
+          <div class="img-container">
+            <a href="https://aj300542.github.io/kobo/" class="d-block mb-1">
+              <img src="img/p1_kobo.jpg" alt="..."></a>
+            <div class="hover-text">经典数字液晶</div>
+          </div>
+          <div class="img-container">
+            <a href="https://aj300542.github.io/kobo2/" class="d-block mb-1">
+              <img src="img/p1_kobo2.jpg" alt="..."></a>
+            <div class="hover-text">水墨数字</div>
+          </div>
           <a href="https://aj300542.github.io/digital/" class="d-block mb-1"><img src="img/p1_digital.jpg"
               alt="..."></a>
-          <p class="font-italic lead">I truly appreciate your help. Your support has made a significant difference</p>
-          <p class="font-italic lead">我非常感谢你的帮助，你的支持对我来说意义重大</p>
+          <p class="font-italic lead">I truly appreciate your help</p>
+          <p class="font-italic lead">非常感谢你的帮助</p>
           <div class="codeframe"><img src="img/mm_facetoface_collect_qrcode_1711603406115.png" alt="..."></div>
-        <div class="codeframe2"><img src="img/1711604188130.jpg" alt="..."></div>
+          <div class="codeframe2"><img src="img/1711604188130.jpg" alt="..."></div>
           <p class="font-italic lead"></p>Scroll down for more content</p>
 
         </div>
