--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       max-width: 100%;
 
     }
+
     .codeframe,
     .codeframe2 {
       position: absolute;
@@ -56,12 +57,15 @@
       height: auto;
       opacity: 0.75;
     }
+
     .codeframe {
-      left: 8vh;
+      left: 30vw;
     }
+
     .codeframe2 {
-      right: 8vh;
+      right: 30vw;
     }
+
     .p2time {
       position: absolute;
       display: flex;
@@ -83,7 +87,8 @@
       top: 35vh;
       z-index: 999;
     }
-        .img-container {
+
+    .img-container {
       position: relative;
       display: inline-block;
     }
@@ -98,7 +103,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: rgba(0, 0, 0, 0.4);
+      background: rgba(0, 0, 0, 0.37);
       color: #fff;
       opacity: 0;
       transition: opacity 0.3s ease;
@@ -110,6 +115,10 @@
     }
 
     .p3time:hover .hover-text {
+      opacity: 1;
+    }
+
+    .container:hover .hover-text {
       opacity: 1;
     }
   </style>
