--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@
         <div class="container text-center text-white">
           <p class="font-italic lead">Hi, how are you doing</p>
           <h1 class="text-uppercase my-4">My name is aj300</h1>
-          <p class="font-italic lead">我会把项目上传到这里</p>
+          <p class="font-italic lead">推荐最右边的碎碎念，语音攻击txt</p>
+
           <div class="img-container">
-            <a href="https://aj300542.github.io/time/" class="d-block mb-1">
-              <img src="img/p2_time.jpg" alt="..."></a>
-            <div class="hover-text">卡顿像素时钟</div>
+            <a href="https://aj300542.github.io/music/" class="d-block mb-1">
+              <img src="img/p2_music.png" alt="..."></a>
+            <div class="hover-text">随身听音乐复刻</div>
           </div>
+          
           <div class="img-container">
             <a href="https://aj300542.github.io/Clock/" class="d-block mb-1">
               <img src="img/p1_clock.jpg" alt="..."></a>
@@ -101,7 +103,7 @@
               <div class="hover-text">碎碎念</div>
             </a>
           </div>
-          <p class="font-italic lead">Clock for Kobo</p>
+          <p class="font-italic lead">这里有音乐有大海有星星有时空</p>
           <div class="img-container">
             <a href="https://aj300542.github.io/cloud/" class="d-block mb-1">
               <img src="img/p2_cloud.jpg" alt="..."></a>
@@ -124,10 +126,11 @@
             </a>
           </div>
           <div class="img-container">
-            <a href="https://aj300542.github.io/music/" class="d-block mb-1">
-              <img src="img/p2_music.png" alt="..."></a>
-            <div class="hover-text">随身听音乐复刻</div>
+            <a href="https://aj300542.github.io/time/" class="d-block mb-1">
+              <img src="img/p2_time.jpg" alt="..."></a>
+            <div class="hover-text">卡顿像素时钟</div>
           </div>
+
           <div class="img-container" style="width: 20vh; opacity: 0.75;">
             <a href="https://aj300542.github.io/music/" class="d-block mb-1">
               <img src="img/mm_facetoface_collect_qrcode_1711603406115.png" alt="..."></a>
@@ -144,9 +147,9 @@
             </a>
           </div>
           <p class="font-italic lead">I truly appreciate your help</p>
-          <p class="font-italic lead">非常感谢你的帮助</p>
+          <p class="font-italic lead">我是那只牛那只马，给你写代码</p>
 
-          <p class="font-italic lead"></p>Scroll down for more content</p>
+          <p class="font-italic lead"></p>马牛鸡羊万分感谢您的投喂</p>
 
         </div>
       </div>
