--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <p class="font-italic lead">I truly appreciate your help</p>
           <p class="font-italic lead">我是那只牛那只马，给你写代码</p>
 
-          <p class="font-italic lead"></p>马牛鸡羊万分感谢您的投喂</p>
+          <p class="font-italic lead"></p>老马万分感谢您的投喂</p>
 
         </div>
       </div>
