--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
       <div class="dark-overlay"></div>
       <div class="position-relative z-index-1">
         <div class="cover-small-left">
-          <a href="https://aj300542.github.io/future/">
+          <a href="https://aj300542.github.io/past/">
             <img src="img/luohan.png" alt="..."></a>
-          <div class="hover-text">过去<br>PAST<br>开发中</div>
+          <div class="hover-text">过去<br>PAST</div>
         </div>
         <div class="cover-small-right">
           <a href="https://aj300542.github.io/future/">
