--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
       opacity: 0;
       transition: opacity 0.3s ease;
       pointer-events: none;
+      text-align: center;
     }
 
     .container:hover .hover-text {
       opacity: 1;
     }
+
     .cover-small-left,
     .cover-small-right {
       position: absolute;
@@ -107,9 +109,9 @@
       <div class="dark-overlay"></div>
       <div class="position-relative z-index-1">
         <div class="cover-small-left">
-          <a href="https://aj300542.github.io/past/">
+          <a href="https://aj300542.github.io/future/">
             <img src="img/luohan.png" alt="..."></a>
-          <div class="hover-text">过去<br>PAST</div>
+          <div class="hover-text">过去<br>PAST<br>开发中</div>
         </div>
         <div class="cover-small-right">
           <a href="https://aj300542.github.io/future/">
@@ -126,7 +128,7 @@
               <img src="img/p2_music.png" alt="..."></a>
             <div class="hover-text">随身听音乐复刻</div>
           </div>
-          
+
           <div class="img-container">
             <a href="https://aj300542.github.io/Clock/" class="d-block mb-1">
               <img src="img/p1_clock.jpg" alt="..."></a>
@@ -145,10 +147,12 @@
           </div>
           <p class="font-italic lead">这里有音乐有大海有星星有时空</p>
           <div class="img-container">
-            <a href="https://aj300542.github.io/poem/" class="d-block mb-1">
-              <img src="img/p1_POEM.jpg" alt="..."></a>
-            <div class="hover-text">唐诗169首</div>
+            <a href="https://aj300542.github.io/ds2/" class="d-block mb-1">
+              <img src="img/p3-ds2.jpg" alt="...">
+              <div class="hover-text">死亡搁浅2时钟</div>
+            </a>
           </div>
+
           <div class="img-container">
             <a href="https://aj300542.github.io/kobo/" class="d-block mb-1">
               <img src="img/p1_kobo.jpg" alt="..."></a>
@@ -166,6 +170,17 @@
             </a>
           </div>
           <div class="img-container">
+            <a href="https://aj300542.github.io/ping/" class="d-block mb-1">
+              <img src="img/p1_ping.jpg" alt="..."></a>
+            <div class="hover-text">乒乓球我打</div>
+          </div>
+          <div class="img-container">
+            <a href="https://aj300542.github.io/poem/" class="d-block mb-1">
+              <img src="img/p1_POEM.jpg" alt="..."></a>
+            <div class="hover-text">唐诗169首</div>
+          </div>
+
+          <div class="img-container">
             <a href="https://aj300542.github.io/time/" class="d-block mb-1">
               <img src="img/p2_time.jpg" alt="..."></a>
             <div class="hover-text">卡顿像素时钟</div>
@@ -175,21 +190,11 @@
             <a href="https://aj300542.github.io/music/" class="d-block mb-1">
               <img src="img/mm_facetoface_collect_qrcode_1711603406115.png" alt="..."></a>
           </div>
-          <div class="img-container" style="width: 20vh; opacity: 0.75;">
-            <a href="https://aj300542.github.io/music/" class="d-block mb-1">
-              <img src="img/1711604188130.jpg" alt="..."></a>
-          </div>
 
-          <div class="img-container">
-            <a href="https://aj300542.github.io/ds2/" class="d-block mb-1">
-              <img src="img/p3-ds2.jpg" alt="...">
-              <div class="hover-text">死亡搁浅2时钟</div>
-            </a>
-          </div>
           <p class="font-italic lead">I truly appreciate your help</p>
           <p class="font-italic lead">我是那只牛那只马，给你写代码</p>
 
-          <p class="font-italic lead"></p>老马万分感谢您的投喂</p>
+          <p class="font-italic lead"></p>马牛鸡羊万分感谢您的投喂</p>
 
         </div>
       </div>
