--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
           </div>
 
           <p class="font-italic lead">I truly appreciate your help</p>
-          <p class="font-italic lead">我是那只牛那只马，给你写代码</p>
+          <p class="font-italic lead">我是那只牛那只马，给你写代码，喜欢不要忘记给我一点点支持</p>
 
-          <p class="font-italic lead"></p>马牛鸡羊万分感谢您的投喂</p>
+          <p class="font-italic lead"></p>你的支持是我前进的动力，谢谢支持</p>
 
         </div>
       </div>
